2008-10-15  Johnny Jacob  <jjohnny@novell.com>

	* src/Backends/Hiveminder/* : Added. Initial commit for Hiveminder
	Backend.

2008-10-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.csproj:
	* tasque.sln:
	* RtmNet/RtmNet.csproj: Split RtmNet code into its own project.
	* RtmNet/AssemblyInfo.cs: Set CLSCompliant to True again.

2008-10-11  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.csproj: Change output type to WinExe to prevent DOS window.

2008-10-11  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* configure.ac: Correct handling of "--enable" flags.  Fixes bug
	#555921, patch courtesy of Romain Tartière.

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/RemoteControl.cs: Add comment about need for review.

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/RemoteControl.cs: Accidentally committed Alex Launi's patch for
	  bug #555028, which adds a bunch of really useful dbus methods:
	  GetTaskIds, GetNameForTaskById, GetCategoryForTaskById,
	  GetStateForTaskById, and MarkTaskAsCompleteById.  In this commit I'm
	  commenting-out MarkTaskAsCompleteById because it still needs to be
	  reviewed.

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.mdp: WindowsApplication -> GtkApplication

2008-10-08  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/TaskGroup.cs:
	* src/Utilities.cs:
	* src/TaskWindow.cs:
	* src/Preferences.cs:
	* src/Application.cs:
	* src/TaskTreeView.cs:
	* src/AbstractTask.cs:
	* src/RemoteControl.cs:
	* src/PreferencesDialog.cs:
	* src/CompletedTaskGroup.cs:
	* src/Backends/EDS/EDSBackends.cs:
	* src/Backends/IceCore/IceBackend.cs:
	* src/Backends/Dummy/DummyBackend.cs:
	* src/Backends/Sqlite/SqliteBackend.cs: Increased readability of boolean
	  expressions.  Fixes bug #555168, patch courtesy of Alex Launi.

2008-10-06  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.csproj: WindowsApplication.cs -> GtkApplication.cs.
